// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`keyof inline 1`] = `
{
  "description": "",
  "events": [],
  "externalExtends": [],
  "name": "asdf",
  "props": [
    {
      "description": "",
      "name": "as",
      "optional": false,
      "type": {
        "type": "union",
        "values": [
          {
            "type": "literal",
            "value": ""a"",
          },
          {
            "type": "literal",
            "value": ""div"",
          },
        ],
      },
    },
  ],
  "slots": [],
}
`;

exports[`keyof svelte elements 1`] = `
{
  "description": "",
  "events": [],
  "externalExtends": [],
  "name": "asdf",
  "props": [
    {
      "description": "",
      "name": "as",
      "optional": false,
      "type": {
        "type": "union",
        "values": [],
      },
    },
  ],
  "slots": [],
}
`;
